--- a/GameTLBB.plist
+++ b/GameTLBB.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://gitee.com/xxslipper/download/raw/master/GameTLBB.ipa</string>
+					<string>https://raw.githubusercontent.com/XXSlipper/testdownload/main/GameTLBB.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
@@ -19,7 +19,7 @@
 				<key>bundle-identifier</key>
 				<string>com.lexarBussines.lexarCloud</string>
 				<key>bundle-version</key>
-				<string>1.0.0</string>
+				<string>1.0</string>
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
